@@ -1,4 +1,5 @@
 HEAD
+	+ Bug fix: Home directory is mapped when accessing from a Windows 7 client
 	+ User quotas are now stored in configuration backup and users directory
 	+ Bug fix: Share size is estimated although some files cannot be read
 	+ Bug fix: Removed permissions are actually removed
